--- a/projects/elements/src/textarea/textarea.css
+++ b/projects/elements/src/textarea/textarea.css
@@ -11,6 +11,7 @@
   --border: 0;
   display: block;
   width: 100%;
+  contain: layout;
 }
 
 ::slotted(textarea) {
